Fix horizontal scrollbar height

--- a/pathmind-webapp/frontend/styles/styles.css
+++ b/pathmind-webapp/frontend/styles/styles.css
@@ -118,7 +118,8 @@ hr {
 
 /* Customized Scrollbar for WebKit Browsers */
 ::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
+  height: 6px;
 }
 
 ::-webkit-scrollbar-track {
